# src/main/java/ru/maximserver/otus_user_service/mapper/UserMapper.java
@@ -3,13 +3,14 @@ import org.mapstruct.Mapper;
 import org.mapstruct.Mapping;
 import ru.maximserver.otus_user_service.entity.UserAccount;
 import ru.maximserver.otus_user_service.jooq.gen.tables.records.UserAccountRecord;
+import ru.maximserver.otus_user_service.model.UpdateUser;
 import ru.maximserver.otus_user_service.model.User;
 
 @Mapper(componentModel = "spring")
 public interface UserMapper {
 
     @Mapping(target="id", ignore = true)
-    UserAccountRecord toUserAccountRecord(User user);
+    UserAccountRecord toUserAccountRecord(UpdateUser user);
 
     @Mapping(target = "last_name", source = "lastName")
     @Mapping(target = "first_name", source = "firstName")
